# ALC-NG

./: .gitignore  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yaml  detect_unused_deps.yml
src/cleaner/: main.rs
src/lib/: arxiv.rs  cleaner.rs  compare.rs  exif_tool.rs  helper.rs  lib.rs  parsing.rs
src/lib/arxiv/: preflight.rs  unused_file_detection.rs  zzrm.rs
src/lib/cleaner/: config.rs  submission.rs
src/lib/cleaner/submission/: deletion_stats.rs  parsed_file.rs
src/lib/compare/: comparer.rs  pixel_perfect.rs
src/lib/exif_tool/: clean.rs
src/lib/helper/: cmd_timeout.rs  contains_byte_slice.rs  dep_parser.rs  exception.rs  find_mains.rs  fls_parser.rs  image_diff.rs  is_newline.rs  latexmk_bib_parser.rs  log_ok.rs  node_empty.rs  source_file.rs
src/lib/parsing/: tree_sitter.rs
tests/: 1806_01078v1.rs  README.md  appendix.rs  comment_env_whitespace.rs  customif_in_newcommand_def.rs  grammar_errors.rs  long_newcommand_def.rs  newlines_between_comments.rs  node_empty.rs  windows_newlines.rs
tests/1806_01078v1/: mainarticle.bbl  mainarticle.tex
tests/appendix/: paper.tex
